kubernetes/apps/app-cluster/media/immich/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-internal
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: kubernetes.krapulax.home
    gethomepage.dev/description: "Photo and video management (internal)"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - media"
    gethomepage.dev/href: "http://photos.krapulax.home"
    gethomepage.dev/icon: "immich.png"
    gethomepage.dev/name: "Immich (internal)"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - photos.krapulax.home
  rules:
    - backendRefs:
        - name: immich
          namespace: media
          port: 2283
