kubernetes/apps/app-cluster/media/immich/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: photos.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/description: "Photo and video library"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - media"
    gethomepage.dev/href: "https://photos.krapulax.dev"
    gethomepage.dev/icon: "immich.png"
    gethomepage.dev/name: "Immich"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - photos.krapulax.dev
  rules:
    - backendRefs:
        - name: immich
          namespace: media
          port: 2283
